--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,23 +21,21 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
-
     // Jake Wharton libs
     compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
     compile 'com.jakewharton:butterknife:8.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
-
     // Rx libs
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.1.6'
-
     // Misc libs
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.devbrackets.android:exomedia:3.0.5'
     compile 'com.mani:ThinDownloadManager:1.2.5'
     compile 'com.shawnlin:PreferencesManager:1.0.2'
+    compile 'com.android.support:cardview-v7:24.2.1'
 }
